--- a/frontend/public/styles.css
+++ b/frontend/public/styles.css
@@ -19,6 +19,18 @@ sub {
 p {
   font-size: 1.5rem;
   font-style: italic;
-  margin: 5rem 3rem 1rem;
-  line-height: 1.3;
+  margin: 5rem 5rem 1rem;
+  line-height: 2;
+}
+
+.error {
+  padding: 3px 10px;
+  background-color: red;
+  color: white;
+}
+
+.message {
+  padding: 3px 10px;
+  background-color: black;
+  color: white;
 }
